Separated Gui reliant code from BeanUtils into GeneralGuiUtils; Needs more tests, and needs cleanup (especially of warnings).